--- a/dev.env
+++ b/dev.env
@@ -10,7 +10,7 @@ MS_DB_TYPE = mssql
 MS_DB_USERNAME = sa
 MS_DB_PASSWORD = 123456
 MS_DB_HOST = 192.168.1.111
-MS_DB_PORT = 1433
+MS_DB_PORT = 1433ss
 
 MS_AUTH_DB_NAME = Vms_MS_AUTH
 
